# microfetch

./: Cargo.toml  colors.odin  main.odin  windows.odin
benches/: benchmark.rs
src/: desktop.rs  main.rs  release.rs  system.rs  uptime.rs
