[package]
name = "microfetch"
version = "0.4.9"
edition = "2024"

[lib]
name = "microfetch_lib"
path = "src/lib.rs"

[[bin]]
name = "microfetch"
path = "src/main.rs"

[dependencies]
windows-strings = "0.4.2"
windows-sys = "0.60.2"


[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Wdk_System_Threading",
    "Win32_System_Kernel",
]

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 3

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.profiler]
inherits = "release"
debug = true
split-debuginfo = "unpacked"
strip = "none"
